--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -48,7 +48,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:textSize="@dimen/txt_size_ex_large"
+                android:textSize="@dimen/txt_size_large"
                 android:textColor="@color/white"
                 android:text="CLEAR"/>
         </RelativeLayout>
